--- a/_config.yml
+++ b/_config.yml
@@ -115,8 +115,8 @@ kramdown:
     block:
       line_numbers: false
 
-jekyll_auth:
-  ssl: true
+# jekyll_auth:
+#  ssl: true
 
 compress_html:
   clippings: all
